--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,37 @@
  *= require_tree .
  *= require_self
  */
+.result {
+  background-color: #FEFFE1;
+}
+
+.asa {
+  font-weight: bolder;
+}
+
+.question {
+  position:relative
+}
+
+.question::before {
+  content: "";
+  position: absolute;
+  left: -10px;
+  width: 10px;
+  height: 100%;
+  background-color: rgba(221, 221, 220, 0.3)
+
+}
+
+.result {
+  position:relative
+}
+
+.result::before {
+  content: "";
+  position: absolute;
+  left: -10px;
+  width: 10px;
+  height: 100%;
+  background-color: rgba(221, 221, 220, 0.3);
+}
